# hermes-voip

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  conftest.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: enforce-worktree.mjs
.claude/skills/adr/: SKILL.md
.claude/skills/memory/: SKILL.md
.claude/skills/orchestrate/: SKILL.md  wave.workflow.js
.claude/skills/worktree-lane/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/workflows/: gate.yml  gitleaks.yml  publish.yml  supply-chain.yml
docs/: CLAUDE.md  backlog.md  stack.md
docs/adr/: 0000-template.md  0001-python-uv-toolchain.md  0002-voip-plugin-architecture.md  0003-cascaded-media-architecture.md  0004-provider-interface-abstraction.md  0005-telephony-media-and-transport.md  0006-streaming-stt-provider.md  0007-streaming-tts-provider.md  0008-vad-endpointing-barge-in.md  0009-prompt-injection-guard.md  0010-dtmf-handling.md  0011-multi-registration-and-call-control.md  0012-default-model-pins.md  0013-sdes-srtp-media-encryption.md  0014-adapter-subclasses-real-base-via-lazy-split.md  0015-symmetric-rtp-comedia-latching.md  0016-webrtc-transport.md  0017-outbound-tts-resample-in-send-path.md  0018-outbound-calling-uac-originate.md  0018-video-call-support.md  0019-outbound-calling-uac-originate.md  0020-voip-caller-modes.md  0021-voip-caller-groups.md  0022-echo-robust-barge-in.md  0022-g722-wideband-codec.md  0023-echo-robust-barge-in.md  0024-supply-chain-audit-all-extras.md  0025-tts-failover-and-elevenlabs-model-id-guard.md  0026-call-termination-hermes-session-signal.md  0027-elevenlabs-v3-audio-tags-model-conditional.md  0028-barge-in-clean-stop-fade.md  0029-agent-triggered-outbound-calls.md  0030-dead-air-comfort-filler.md  0031-intercom-caller-mode-and-in-call-dtmf-actuation.md  0032-webrtc-media-wiring-and-opus.md  0033-in-process-aec-aggressive-barge-in.md  0033-rich-inbound-call-context.md  0034-caller-group-channel-routing.md  0034-dtmf-sip-info-and-in-band.md  0034-ice-turn-trickle-consent.md  (+89 more)
docs/plan/: IMPLEMENTATION-PLAN.md  MULTIREG-CALLCONTROL-PLAN.md
docs/reference/: elevenlabs-v3-audio-tags.md
docs/runbooks/: 0001-sip-extension-credentials.md  0002-voip-live-validation.md  0003-supply-chain-audit.md  0003-voip-caller-modes.md  0004-voip-tts-voice.md  0005-voip-rtp-inactivity-timeout.md  0006-voip-comfort-filler.md  0007-voip-outbound-calling.md  0008-voip-intercom-and-dtmf.md  0009-voip-webrtc-media.md  0010-voip-caller-modes.md  0011-voip-acoustic-echo-cancellation.md  0011-voip-enable-plugin.md  0012-voip-inbound-call-context.md  0013-voip-incident-oncall.md  0014-voip-slo-metrics.md  0015-voip-silence-reprompt-and-goodbye.md  0016-orchestration-loop.md  0017-devcontainer-resources.md  0018-voip-acoustic-echo-cancellation.md  0019-release-process.md  0020-voip-max-call-duration.md  CLAUDE.md
packaging/hermes-plugins/hermes-voip/: __init__.py  plugin.yaml
src/hermes_voip/: __init__.py  _chars.py  _decimal.py  _header_list.py  _lazy_singleton.py  _name_addr.py  adapter.py  aio.py  call.py  call_context.py  call_end.py  caller_modes.py  config.py  dialog.py  digest.py  dtmf.py  dtmf_config.py  dtmf_confirm.py  dtmf_sipinfo.py  hermes_surface.py  incall.py  intercom.py  keepalive.py  manager.py  manifest.py  message.py  multi_intercom.py  notice_filter.py  originate.py  outbound_allow.py  plugin.py  plugin.yaml  provider_error.py  refer.py  registration.py  rtcp.py  rtp.py  sdp.py  session_timer.py  sip.py  (+4 more)
src/hermes_voip/guard/: __init__.py  _onnx_runtime.py  normalize.py  onnx.py
src/hermes_voip/media/: __init__.py  aec.py  audio.py  call_loop.py  call_progress.py  dtls.py  endpoint.py  engine.py  g722.py  ice.py  opus.py  sip_dtls_session.py  srtcp.py  srtp.py  vad.py  video_rtp.py  webrtc_session.py
src/hermes_voip/providers/: __init__.py  asr.py  audio.py  build.py  guard.py  onnx_compat.py  policy.py  registry.py  transport.py  tts.py
src/hermes_voip/skills/make-reservation/: SKILL.md
src/hermes_voip/stt/: __init__.py  deepgram.py  resample.py  sherpa_onnx.py
src/hermes_voip/transport/: __init__.py  connection.py  framing.py  transaction.py  ws_connection.py
src/hermes_voip/tts/: __init__.py  _stream.py  elevenlabs.py  failover.py  segment.py  sherpa_kokoro.py
tests/: __init__.py  conftest.py  g722_kat_vectors.py  test_adapter.py  test_adapter_attended_consult.py  test_adapter_call_progress.py  test_adapter_caller_modes.py  test_adapter_connect_is_reconnect.py  test_adapter_deny_mode.py  test_adapter_observability.py  test_adapter_production_safety.py  test_adapter_reconnect.py  test_adapter_rtcp.py  test_adapter_secure_media.py  test_adapter_session_timers.py  test_adapter_sip_dtls.py  test_adapter_tls_context.py  test_adapter_webrtc.py  test_adapter_wss_signalling.py  test_adr_unique_numbers.py  test_aec_barge_in_integration.py  test_aio.py  test_all_exports_utility.py  test_audio_content.py  test_backlog_wave10_checkoff.py  test_backlog_wave10_checkoff_check.py  test_backlog_wave7_checkoff.py  test_barge_in_gate.py  test_best_practices_alignment.py  test_call.py  test_call_context.py  test_call_dtmf_sipinfo.py  test_call_end.py  test_call_loop.py  test_call_loop_call_progress.py  test_call_loop_dtmf.py  test_call_progress_microbench.py  test_caller_groups.py  test_caller_modes.py  test_caller_privilege.py  (+127 more)
tests/e2e/: __init__.py  _fake_gateway.py  _fake_webrtc_gateway.py  test_concurrent_inbound_calls.py  test_inbound_call.py  test_inbound_webrtc_call.py  test_outbound_call.py
tests/fixtures/: regen_g722_kat.py
tests/providers/: __init__.py  test_build.py
tests/stt/: test_deepgram.py  test_resample.py  test_sherpa_onnx.py
tests/transport/: __init__.py  _loopback.py  test_connection.py  test_framing.py  test_keepalive.py  test_keepalive_ping.py  test_transaction.py  test_ws_connection.py
tools/: check_database_exposure.py  check_optional_extras_guard.py
(+4 files in other folders)
