[project]
name = "hermes-voip"
version = "0.0.0"
description = "Hermes plugin for two-way voice over telephony, on any RFC-compliant SIP-over-TLS or WebRTC voice gateway."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts==0.2.2",
]

[project.optional-dependencies]
# The Hermes runtime that loads this plugin; provided by the host. Declared as an
# optional extra so its large transitive tree stays out of the default install,
# the production licence gate, and the default pip-audit env. The typed boundary
# is hermes_voip.hermes_surface; the contract test verifies the real surface.
hermes = ["hermes-agent==0.16.0"]
# Local-inference ML stack for the conversational providers (ADR-0006/0007/0008/
# 0009): onnxruntime for VAD (silero) + the injection guard (DeBERTa), sherpa-onnx
# for streaming STT/TTS, tokenizers for the DeBERTa guard's SentencePiece tokenizer
# (loads tokenizer.json standalone — far lighter than pulling transformers), numpy
# for frame math. Optional so the default install, licence gate, and audit stay
# lean; the `providers` CI job installs it. onnxruntime is pinned to the symbol
# version sherpa-onnx 1.13.2 links against; that wheel needs onnxruntime's library
# symlinked onto its RPATH (hermes_voip.providers.onnx_compat).
ml = [
    "numpy==2.4.6",
    "onnxruntime==1.24.4",
    "sherpa-onnx==1.13.2",
    "tokenizers==0.23.1",
]
# SDES-SRTP media encryption (ADR-0013, RFC 3711): AES-CM keystream + HMAC-SHA1
# auth via pyca/cryptography (Apache-2.0).  Lazy-imported inside media/srtp.py so
# `import hermes_voip.media.srtp` works without this extra and mypy stays clean.
# The `media` CI job installs this extra and runs the full RFC-3711 KAT suite.
media = [
    "cryptography==46.0.7",
]
# WebRTC media keying: DTLS handshake + RFC 5705 keying-material export
# (ADR-0016, media/dtls.py).  Lazy-imported so the default install stays lean.
# pyOpenSSL 26.2.0 (Apache-2.0): accepts cryptography==46.x (our media-extra
# pin); fixes CVE-2026-27448 and CVE-2026-27459 present in 25.3.0.
# pyopenssl==26.3.0 requires cryptography>=49, which would force a KAT re-run.
webrtc = [
    "pyopenssl==26.2.0",
]

# ---------------------------------------------------------------------------
# Hermes plugin discovery (hermes_agent.plugins entry point group).
#
# The Hermes runtime scans this group at startup. The value must be a module
# path that exposes a callable ``register(ctx)`` at module level. We point
# directly at the package root (``hermes_voip``) so that the call is:
#
#     import hermes_voip; hermes_voip.register(ctx)
#
# ``hermes_voip.__init__`` re-exports ``register`` from ``hermes_voip.adapter``;
# no ML or transport heavy imports occur at this point — those are deferred to
# ``connect()`` and ``_on_inbound_invite``. A bare ``import hermes_voip``
# therefore stays light (only audioop-lts and the sans-IO SIP modules).
#
# To activate the plugin the operator must run:
#     hermes plugins enable hermes-voip
# (Hermes gates pip-installed plugins by config.yaml; see ADR-0002.)
[project.entry-points."hermes_agent.plugins"]
hermes-voip = "hermes_voip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_voip"]

# ---------------------------------------------------------------------------
# Ruff — format + lint at high strictness (AGENTS.md rule 17). A strong curated
# rule set rather than literal "ALL" (whose opinionated edge rules add churn
# without adding safety). Extend deliberately.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "I",                # isort
  "N",                # pep8-naming
  "D",                # pydocstyle
  "UP",               # pyupgrade
  "ANN",              # flake8-annotations (no missing/Any annotations)
  "S",                # flake8-bandit (security)
  "BLE",              # flake8-blind-except
  "B",                # flake8-bugbear
  "A",                # flake8-builtins
  "C4",               # flake8-comprehensions
  "T20",              # flake8-print
  "PT",               # flake8-pytest-style
  "RET",              # flake8-return
  "SIM",              # flake8-simplify
  "ARG",              # flake8-unused-arguments
  "PTH",              # flake8-use-pathlib
  "ERA",              # eradicate (commented-out code)
  "PL",               # pylint
  "TRY",              # tryceratops (exception handling)
  "RUF",              # ruff-specific
]
ignore = [
  "D203",   # conflicts with D211 (no blank line before class docstring)
  "D213",   # conflicts with D212 (multi-line summary on first line)
  "TRY003", # long messages outside the exception class — noisy with assigned msgs
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Pin first-party explicitly so import grouping is identical whether or not the
# package happens to be installed in the active venv (otherwise ruff's heuristic
# classifies hermes_voip differently locally vs CI — a real determinism bug).
known-first-party = ["hermes_voip"]

[tool.ruff.lint.per-file-ignores]
# asserts are the point of tests; test fns/classes/fakes need no docstrings
# (D101/D102/D103/D105/D106/D107); test credentials are deliberately fake literals
# (bandit S105/S106/S107); tests compare against literal expected values (PLR2004).
"tests/**" = [
  "S101", "D101", "D102", "D103", "D105", "D106", "D107",
  "S105", "S106", "S107", "PLR2004",
  "ARG001", "ARG002", "ARG005",  # fakes/lambdas mirror real signatures; matching unused params are intentional
]

# ---------------------------------------------------------------------------
# mypy — strict, no escape hatches (AGENTS.md rule 17).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
disallow_any_explicit = true
files = ["src", "tests"]
# ``src/hermes_voip/adapter.py`` imports the real hermes-agent runtime
# (``gateway.platforms.base`` / ``gateway.config``), which is an OPTIONAL extra
# absent from the default install and ships no ``py.typed``. Type-checking it
# here (no ``hermes`` extra) would force ``# type: ignore[import-not-found]``
# escape hatches — banned by rule 17. Instead it is type-checked in the
# ``hermes-contract`` CI job (which installs the ``hermes`` extra) via the
# dedicated mypy config below; ``tests/test_adapter.py``,
# ``tests/test_adapter_reconnect.py``, ``tests/test_media_concurrency_hermes.py``,
# and the end-to-end ``tests/e2e/test_inbound_call.py`` likewise import the real
# runtime and are excluded from the default gate (they ``importorskip`` and run in
# that same CI job). ``tests/e2e/_fake_gateway.py`` imports no runtime and stays in
# this gate.
exclude = '(^|/)(src/hermes_voip/adapter\.py|tests/test_adapter\.py|tests/test_adapter_reconnect\.py|tests/test_media_concurrency_hermes\.py|tests/e2e/test_inbound_call\.py)$'

# hermes-agent ships no ``py.typed``. When the ``hermes`` extra IS installed
# (the hermes-contract CI job type-checks ``adapter.py`` + ``test_adapter.py``
# explicitly, which bypasses ``exclude``), ``follow_untyped_imports`` makes mypy
# ANALYSE the real ``gateway`` / ``hermes_cli`` source to derive genuine types —
# NOT ``ignore_missing_imports`` (which would erase them to ``Any`` and is a
# banned escape hatch). With the extra absent these sections are inert.
[[tool.mypy.overrides]]
module = ["gateway.*", "hermes_cli.*"]
follow_untyped_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "strict"  # async tests carry an explicit @pytest.mark.asyncio

[dependency-groups]
# Exact pins (AGENTS.md rule 33: no floating ranges); uv.lock is the full
# transitive lock and CI installs with `uv sync --frozen`.
dev = [
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "pip-licenses==5.5.5",
    "pre-commit==4.6.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
]
