[project]
name = "hermes-voip"
version = "0.3.0"
description = "Hermes plugin for two-way voice over telephony, on any RFC-compliant SIP-over-TLS or WebRTC voice gateway."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Troy Kelly" }]
keywords = ["sip", "voip", "telephony", "webrtc", "hermes", "voice-agent"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "audioop-lts==0.2.2",
]

[project.optional-dependencies]
# The Hermes runtime that loads this plugin; provided by the host. Declared as an
# optional extra so its large transitive tree stays out of the default install,
# the production licence gate, and the default pip-audit env. The typed boundary
# is hermes_voip.hermes_surface; the contract test verifies the real surface.
hermes = ["hermes-agent==0.17.0"]
# Local-inference ML stack for the conversational providers (ADR-0006/0007/0008/
# 0009): onnxruntime for VAD (silero) + the injection guard (DeBERTa), sherpa-onnx
# for streaming STT/TTS, tokenizers for the DeBERTa guard's SentencePiece tokenizer
# (loads tokenizer.json standalone — far lighter than pulling transformers), numpy
# for frame math. Optional so the default install, licence gate, and audit stay
# lean; the `providers` CI job installs it. onnxruntime 1.24.4 is the symbol
# version sherpa-onnx 1.13.2 links against; that wheel needs onnxruntime's library
# symlinked onto its RPATH (hermes_voip.providers.onnx_compat). The
# sys_platform != 'darwin' marker is required because onnxruntime 1.24.4 ships no
# macOS wheel for py3.13; sherpa-onnx self-bundles onnxruntime on macOS so the
# marker lets macOS installs of [ml] succeed without a conflicting wheel.
ml = [
    "numpy==2.4.6",
    "onnxruntime==1.24.4; sys_platform != 'darwin'",
    "sherpa-onnx==1.13.2",
    "tokenizers==0.23.1",
]
# SDES-SRTP media encryption (ADR-0013, RFC 3711): AES-CM keystream + HMAC-SHA1
# auth via pyca/cryptography (Apache-2.0).  Lazy-imported inside media/srtp.py so
# `import hermes_voip.media.srtp` works without this extra and mypy stays clean.
# The `media` CI job installs this extra and runs the full RFC-3711 KAT suite.
# Compatible range >=46.0.7,<49: the >=46.0.7 lower bound is a SECURITY FLOOR
# (CVE-2026-39892 fixed in 46.0.7, CVE-2026-34073 fixed in 46.0.6); the <49
# upper bound keeps pyopenssl==26.2.0 satisfiable (it requires cryptography<49).
# Our only use is hazmat AES-CTR (Cipher/algorithms.AES/modes.CTR), stable 46–48.
media = [
    "cryptography>=46.0.7,<49",
]
# WebRTC transport building blocks — ADR-0016. Lazy-imported inside each
# sub-module so ``import hermes_voip`` stays light. All licences are permissive
# (Apache-2.0 / BSD-3-Clause); no copyleft.
#
# pyOpenSSL 26.2.0 (Apache-2.0): DTLS handshake + RFC 5705 keying-material
# export (media/dtls.py, PR-C). Requires cryptography>=46,<49, which aligns with
# our media-extra range (cryptography>=46.0.7,<49); fixes CVE-2026-27448 and
# CVE-2026-27459 present in 25.3.0. pyopenssl==26.3.0 requires cryptography>=49,
# which would push us outside our <49 upper bound, so it stays pinned here.
#
# websockets >=15.0,<17 (BSD-3-Clause): SIP-over-Secure-WebSocket client (RFC
# 6455 / RFC 7118, transport/ws_connection.py, PR-A). Pure-Python, asyncio-native.
# Compatible range: we use only websockets.asyncio.client.connect with
# subprotocols/max_size/ping_interval + the ClientConnection TYPE_CHECKING import
# (stable since 12.0, no 16-only API). The >=15.0 lower bound covers Hermes's
# transitive websockets 15.0.1 (via uvicorn[standard]).
#
# aioice 0.10.2 (BSD-3-Clause): ICE agent for WebRTC connectivity (RFC 8445,
# media/ice.py, PR-D). Transitive deps: dnspython (ISC), ifaddr (MIT).
#
# opuslib 3.0.1 (BSD-3-Clause): pure-Python ctypes binding to libopus (the Opus
# encoder/decoder for the WebRTC wire codec, media/opus.py — ADR-0032). It is a
# py3-only wrapper that carries NO compiled extension; it dlopen's the SYSTEM
# libopus shared library (``ctypes.util.find_library('opus')`` → ``libopus.so.0``)
# at first use. libopus (BSD-3-Clause) is therefore a RUNTIME system dependency
# the host must provide: the devcontainer image ships ``libopus0`` and the
# ``webrtc`` + ``supply-chain`` CI jobs ``apt-get install -y libopus0`` before the
# suite. media/opus.py raises a clear ImportError when either the wheel or the
# shared library is absent (rule 37). No FFmpeg/PyAV (LGPL) is pulled in.
webrtc = [
    "aioice==0.10.2",
    "opuslib==3.0.1",
    "pyopenssl==26.2.0",
    "websockets>=15.0,<17",
]

[project.urls]
Homepage = "https://github.com/troykelly/hermes-voip"
Repository = "https://github.com/troykelly/hermes-voip"

# ---------------------------------------------------------------------------
# Hermes plugin discovery (hermes_agent.plugins entry point group).
#
# The Hermes runtime scans this group at startup. The value must be a module
# path that exposes a callable ``register(ctx)`` at module level. We point
# directly at the package root (``hermes_voip``) so that the call is:
#
#     import hermes_voip; hermes_voip.register(ctx)
#
# ``hermes_voip.__init__`` re-exports ``register`` from ``hermes_voip.adapter``;
# no ML or transport heavy imports occur at this point — those are deferred to
# ``connect()`` and ``_on_inbound_invite``. A bare ``import hermes_voip``
# therefore stays light (only audioop-lts and the sans-IO SIP modules).
#
# To activate the plugin the operator must run:
#     hermes plugins enable hermes-voip
# (Hermes gates pip-installed plugins by config.yaml; see ADR-0002.)
[project.entry-points."hermes_agent.plugins"]
hermes-voip = "hermes_voip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_voip"]
# Ship the plugin manifest as importable package data (ADR-0037) so the wheel is
# self-describing: importlib.resources.files("hermes_voip")/"plugin.yaml" resolves it.
# Non-.py files under the package dir are not included by hatchling unless declared.
artifacts = [
  "src/hermes_voip/plugin.yaml",
  # Bundled call-scenario skills (ADR-0047): skills/<name>/SKILL.md shipped as
  # importable package data so register() can resolve each via
  # importlib.resources.files("hermes_voip") / "skills" / <name> / "SKILL.md".
  "src/hermes_voip/skills/**/SKILL.md",
]

# ---------------------------------------------------------------------------
# Ruff — format + lint at high strictness (AGENTS.md rule 17). A strong curated
# rule set rather than literal "ALL" (whose opinionated edge rules add churn
# without adding safety). Extend deliberately.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "I",                # isort
  "N",                # pep8-naming
  "D",                # pydocstyle
  "UP",               # pyupgrade
  "ANN",              # flake8-annotations (no missing/Any annotations)
  "S",                # flake8-bandit (security)
  "BLE",              # flake8-blind-except
  "B",                # flake8-bugbear
  "A",                # flake8-builtins
  "C4",               # flake8-comprehensions
  "T20",              # flake8-print
  "PT",               # flake8-pytest-style
  "RET",              # flake8-return
  "SIM",              # flake8-simplify
  "ARG",              # flake8-unused-arguments
  "PTH",              # flake8-use-pathlib
  "ERA",              # eradicate (commented-out code)
  "PL",               # pylint
  "TRY",              # tryceratops (exception handling)
  "RUF",              # ruff-specific
]
ignore = [
  "D203",   # conflicts with D211 (no blank line before class docstring)
  "D213",   # conflicts with D212 (multi-line summary on first line)
  "TRY003", # long messages outside the exception class — noisy with assigned msgs
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Pin first-party explicitly so import grouping is identical whether or not the
# package happens to be installed in the active venv (otherwise ruff's heuristic
# classifies hermes_voip differently locally vs CI — a real determinism bug).
known-first-party = ["hermes_voip"]

[tool.ruff.lint.per-file-ignores]
# asserts are the point of tests; test fns/classes/fakes need no docstrings
# (D101/D102/D103/D105/D106/D107); test credentials are deliberately fake literals
# (bandit S105/S106/S107); tests compare against literal expected values (PLR2004).
"tests/**" = [
  "S101", "D101", "D102", "D103", "D105", "D106", "D107",
  "S105", "S106", "S107", "PLR2004",
  "ARG001", "ARG002", "ARG005",  # fakes/lambdas mirror real signatures; matching unused params are intentional
]
# The directory-install plugin layout (ADR-0037) lives in a HYPHENATED dir named after
# the Hermes plugin (`hermes-voip/`), which Hermes loads by path — not an importable
# Python module, so N999 (invalid module name) does not apply. It re-exports the real
# register from the hermes_voip package.
"packaging/hermes-plugins/hermes-voip/__init__.py" = ["N999"]

# ---------------------------------------------------------------------------
# mypy — strict, no escape hatches (AGENTS.md rule 17).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
disallow_any_explicit = true
files = ["src", "tests", "tools"]
# ``src/hermes_voip/adapter.py`` imports the real hermes-agent runtime
# (``gateway.platforms.base`` / ``gateway.config``), which is an OPTIONAL extra
# absent from the default install and ships no ``py.typed``. Type-checking it
# here (no ``hermes`` extra) would force ``# type: ignore[import-not-found]``
# escape hatches — banned by rule 17. Instead it is type-checked in the
# ``hermes-contract`` CI job (which installs the ``hermes`` extra) via the
# dedicated mypy config below; ``tests/test_adapter.py``,
# ``tests/test_adapter_caller_modes.py``, ``tests/test_adapter_call_progress.py``,
# ``tests/test_adapter_secure_media.py``, ``tests/test_adapter_session_timers.py``,
# ``tests/test_adapter_reconnect.py``, ``tests/test_media_concurrency_hermes.py``,
# ``tests/test_adapter_production_safety.py``,
# ``tests/test_adapter_observability.py`` (the structured lifecycle + RTCP-quality log events),
# ``tests/test_outbound_uri_injection.py`` (the outbound Request-URI injection guard),
# and the end-to-end ``tests/e2e/test_inbound_call.py`` +
# ``tests/e2e/test_concurrent_inbound_calls.py`` + ``tests/e2e/test_outbound_call.py`` +
# ``tests/e2e/test_inbound_webrtc_call.py``
# likewise import the real runtime and are excluded from the default gate (they
# ``importorskip`` and run in that same CI job). ``tests/e2e/_fake_gateway.py`` and
# ``tests/e2e/_fake_webrtc_gateway.py`` import no runtime and stay in this gate.
#
# ``src/hermes_voip/voip_tools.py`` references a hermes runtime module
# (``gateway.session_context``) — lazily, inside the tool handler, so a bare
# ``import hermes_voip`` stays light at RUNTIME — but mypy still analyses that body
# and the module is absent from the default (no-``hermes``-extra) install. Rather
# than launder it with ``# type: ignore[import-not-found]`` (rule 17), it joins the
# hermes-contract type-check (which installs the extra and resolves the real
# symbols via ``follow_untyped_imports``), same as ``adapter.py``.
exclude = '(^|/)(src/hermes_voip/adapter\.py|src/hermes_voip/voip_tools\.py|tests/test_adapter\.py|tests/test_adapter_connect_is_reconnect\.py|tests/test_adapter_caller_modes\.py|tests/test_adapter_deny_mode\.py|tests/test_adapter_call_progress\.py|tests/test_adapter_secure_media\.py|tests/test_adapter_session_timers\.py|tests/test_adapter_reconnect\.py|tests/test_adapter_rtcp\.py|tests/test_adapter_sip_dtls\.py|tests/test_adapter_webrtc\.py|tests/test_adapter_wss_signalling\.py|tests/test_media_concurrency_hermes\.py|tests/test_adapter_attended_consult\.py|tests/test_adapter_production_safety\.py|tests/test_adapter_observability\.py|tests/test_outbound_uri_injection\.py|tests/e2e/test_inbound_call\.py|tests/e2e/test_concurrent_inbound_calls\.py|tests/e2e/test_outbound_call\.py|tests/e2e/test_inbound_webrtc_call\.py)$'

# hermes-agent ships no ``py.typed``. When the ``hermes`` extra IS installed
# (the hermes-contract CI job type-checks ``adapter.py`` + ``test_adapter.py``
# explicitly, which bypasses ``exclude``), ``follow_untyped_imports`` makes mypy
# ANALYSE the real ``gateway`` / ``hermes_cli`` source to derive genuine types —
# NOT ``ignore_missing_imports`` (which would erase them to ``Any`` and is a
# banned escape hatch). With the extra absent these sections are inert.
[[tool.mypy.overrides]]
module = ["gateway.*", "hermes_cli.*"]
follow_untyped_imports = true

# ``websockets`` lives in the optional ``webrtc`` extra and is absent from the
# default mypy gate.  ``ws_connection.py`` imports ``websockets.asyncio.client``
# under ``TYPE_CHECKING``; the test helper imports ``websockets.asyncio.server``
# and ``websockets.typing``.  All three sub-modules ship no ``py.typed``, so
# ``follow_untyped_imports`` would give only ``Any``-typed stubs — the same
# escape-hatch problem as hermes-agent.  ``ignore_missing_imports`` is
# intentionally used here ONLY for the optional-extra guard: the webrtc CI job
# installs websockets and runs the full test suite against the real library,
# so this override does not hide runtime failures.  The mypy coverage that
# matters (the TYPE_CHECKING-gated ``ClientConnection`` annotation) is exercised
# when the devcontainer has the webrtc extra active.
[[tool.mypy.overrides]]
module = ["websockets.*"]
ignore_missing_imports = true

# ``opuslib`` lives in the optional ``webrtc`` extra and ships no ``py.typed``
# (its ``Decoder.decode`` even returns ``bytes | Any``). ``media/opus.py`` declares
# narrow local Protocols over the ``importlib``-loaded module surface — the same
# escape-hatch-free strategy as media/dtls.py / media/ice.py — so it never imports
# ``opuslib`` names directly under ``TYPE_CHECKING``. ``ignore_missing_imports`` is
# used ONLY for the optional-extra guard (the ``importlib.import_module("opuslib")``
# call), exactly like the ``websockets`` override above: the webrtc CI job installs
# opuslib + libopus and runs the full Opus suite against the real library, so this
# override hides no runtime failure.
[[tool.mypy.overrides]]
module = ["opuslib.*"]
ignore_missing_imports = true

# ``plugins.plugin_utils`` is a Hermes-RUNTIME module (the documented
# ``lazy_singleton`` helper) that is NOT vendored into the default (no-hermes) test
# environment. ``_lazy_singleton.py`` imports it through a GUARDED try/except and
# binds it to a narrow local Protocol (``_LazySingletonFactory``) — so NO ``Any``
# crosses the boundary regardless of whether the module is present. ``ignore_missing_imports``
# is used ONLY as the optional-runtime guard (so the guarded import resolves under
# mypy when the runtime is absent), exactly like the ``websockets`` / ``opuslib``
# overrides above: the runtime-present behaviour is the documented helper, the
# runtime-absent behaviour is the tested stdlib fallback (ADR-0046).
[[tool.mypy.overrides]]
module = ["plugins.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "strict"  # async tests carry an explicit @pytest.mark.asyncio
# Hang safety-net (docs/backlog.md "Test / CI robustness", docs/stack.md
# "Tests"): pytest's built-in faulthandler support dumps every thread's stack
# to stderr, naming the hung test, once a SINGLE test has run longer than this
# many seconds -- with no new dependency (rule 33; deliberately not
# pytest-timeout). 300s (5 minutes) is a GENEROUS ceiling: no legitimate test
# in this suite approaches it (the base suite is ~34s total; the slowest
# individual extras-gated socket/crypto tests run in low single-digit
# seconds), so a real firing is unambiguous evidence of a genuine hang, not a
# false positive on an ordinary slow test. This bounds any single hung test
# without failing a slow-but-progressing full extras run (~15-20 min total).
faulthandler_timeout = 300

# Pins a CVE-safe pyjwt floor (PYSEC-2026-175..179, fix: 2.13.0; ref ADR-0062).
# hermes-agent==0.17.0 already requires pyjwt[crypto]==2.13.0, so this is a
# defence-in-depth floor that keeps the resolution safe against any future
# hermes-agent change that would relax the pin below the patched version.
[tool.uv]
override-dependencies = ["pyjwt[crypto]>=2.13.0"]

[dependency-groups]
# Exact pins (AGENTS.md rule 33: no floating ranges); uv.lock is the full
# transitive lock and CI installs with `uv sync --frozen`.
dev = [
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "pip-licenses==5.5.5",
    "pre-commit==4.6.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
    # Type stubs for PyYAML (a transitive runtime dep) so the plugin-manifest test
    # parses plugin.yaml under mypy --strict without an import-untyped escape hatch.
    "types-pyyaml==6.0.12.20260518",
]
